# My-own-Renderer

./: CMakeLists.txt  HDRI_setup.py  Performance Log  interface.py  light_types.py  obj_classes.py  object_type_flags.py  object_types.py  ray_tracer.py  renderer.py  rng_benchmark.py  saved_scenes.py  sources  tmp_rng_benchmark.py  xoshiro.py
C++ attempt/include/glad/: glad.h
C++ attempt/src/: main.cpp
src/: glad.c  main.cpp
